--- a/index.html
+++ b/index.html
@@ -2,23 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="build/css/vendor.css">
+    <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <title>ping pong</title>
   </head>
   <body>
-    <form id="ping-pong">
-      <label for="goal">Enter a number:</label>
-      <input id="goal" type="number">
-      <button type="submit">Submit</button>
-    </form>
-    <form id="signup">
-      <label for="email">Enter your email:</label>
-      <input id="emial" type="text"/>
-      <button type="submit">Submit</button>
-    </form>
-    <ul id="solution">
+    <div class="container">
+      <h3>Well look at the time! </h3>
+      <h3 id="time"></h3>
+      <a href="/weather.html">Click for the weather...</a>
+      <form id="ping-pong">
+        <div class="form-group">
+          <label for="goal">Enter a number:</label>
+          <input id="goal" type="number">
+          <button type="submit">Submit</button>
+        </div>
+      </form>
+      <form id="signup">
+        <div class="form-group">
+          <label for="email">Enter your email:</label>
+          <input id="email" type="text"/>
+          <button type="submit">Submit</button>
+        </div>
+      </form>
+      <ul id="solution">
 
-    </ul>
+      </ul>
+    </div>
   </body>
 </html>
